upd type resolver; add async module