@@ -44,24 +44,22 @@ class Ixion {
 
     @Throws(IOException::class, InterruptedException::class)
     fun executeBytecode(className: String?) {
-//        val processBuilder = ProcessBuilder(
-//            "java",
-//            "--enable-preview",
-//            "-cp",
-//            "${IxionConstant.OUT_DIR}${File.pathSeparator}target/classes",
-//            className
-//        )
-//        processBuilder.inheritIO()
-//        val process = processBuilder.start()
-//
-//        val status = process.waitFor()
-//        if (status != 0) System.err.println("Process finished with exit code $status")
-        val classpath: Array<URL?> = arrayOf(File(IxionConstant.OUT_DIR).toURI().toURL())
-        URLClassLoader(classpath).use { loader ->
-            loader
-                .loadClass(className)
-                .getMethod("main", Array<String>::class.java)
-                .invoke(null, arrayOfNulls<String>(0) as Any)
+        val javaBin = Path.of(System.getProperty("java.home"), "bin", "java").toString()
+        val inheritedClasspath = System.getProperty("java.class.path")
+        val fullClasspath = IxionConstant.OUT_DIR + File.pathSeparator + inheritedClasspath
+
+        val processBuilder = ProcessBuilder(
+            javaBin,
+            "-cp",
+            fullClasspath,
+            className
+        )
+        processBuilder.inheritIO()
+        val process = processBuilder.start()
+
+        val status = process.waitFor()
+        if (status != 0) {
+            System.err.println("Process finished with exit code $status")
         }
     }
 
